--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "axios": "^1.5.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongodb": "^6.1.0"
+    "mongodb": "^6.1.0",
+    "srt-parser-2": "^1.2.3"
   },
   "engines": {
     "node": ">=14"
