--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongodb": "^6.1.0",
-    "srt-parser-2": "^1.2.3"
+    "node-webvtt": "^1.9.4",
+    "srt-parser-2": "^1.2.3",
+    "vtt-to-srt": "^0.1.0",
+    "ytdl-core": "^4.11.5"
   },
   "engines": {
     "node": ">=14"
