--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   "dependencies": {
     "axios": "^1.5.1",
     "cors": "^2.8.5",
+    "cron": "^3.1.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "https": "^1.0.0",
     "mongodb": "^6.1.0",
     "node-webvtt": "^1.9.4",
     "srt-parser-2": "^1.2.3",
